[gd_scene load_steps=5 format=3 uid="uid://02n5g36u3kgn"]

[ext_resource type="Script" path="res://gameObjects/UI/shieldRect.gd" id="1_kcuw2"]
[ext_resource type="Texture2D" uid="uid://cxd2x4ydumc41" path="res://art/UI/ui x3.png" id="1_n6k67"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ohagw"]
atlas = ExtResource("1_n6k67")
region = Rect2(123, 618, 42, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0clb"]
atlas = ExtResource("1_n6k67")
region = Rect2(696, 615, 48, 15)

[node name="PanelContainer" type="PanelContainer"]
offset_right = 73.0
offset_bottom = 23.0
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_kcuw2")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="Panel2"]
layout_mode = 0
offset_left = 3.0
offset_top = 4.0
offset_right = 69.0
offset_bottom = 19.0
value = 100.0
nine_patch_stretch = true
texture_under = SubResource("AtlasTexture_ohagw")
texture_progress = SubResource("AtlasTexture_b0clb")

[node name="shieldTimer" type="Timer" parent="Panel2"]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Panel2/shieldTimer" to="." method="_on_shield_timer_timeout"]
